--- a/Archives.html
+++ b/Archives.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/n">bootstrap modal</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1m" data-rv-view="136" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/g">how to create a website</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1m" data-rv-view="136" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
 
     
     <div class="container">
@@ -111,12 +111,12 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/mbr-1200x797.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/img-600x450.jpg" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title">CAS Fair</h4>
                         <h5 class="card-subtitle">Written By: Emma McDonald</h5>
                         <p class="card-text">An article describing the high school CAS event and information presented in it</p>
-                        <div class="card-btn"><a href="page17.html" class="btn btn-danger">MORE</a></div>
+                        <div class="card-btn"><a href="page25.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
             </div>
