--- a/Events.html
+++ b/Events.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-12" data-rv-view="14" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co/g">how to create a website for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-12" data-rv-view="14" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -83,11 +83,11 @@
                                 <p>An article describing the high school CAS event and information presented in it</p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page17.html">MORE</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page25.html">MORE</a></div>
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 50%;">
-                            <div class="mbr-figure"><img src="assets/images/mbr-1620x1080.jpg"></div>
+                            <div class="mbr-figure"><img src="assets/images/img-1400x1050.jpg"></div>
                         </div>
 
                     </div>
