--- a/page25.html
+++ b/page25.html
@@ -28,7 +28,7 @@
   
 </head>
 <body>
-<section id="menu-6e" data-rv-view="641">
+<section id="menu-75" data-rv-view="1003">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/p">bootstrap navbar</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-6g" data-rv-view="645" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 80px;">
+<section class="engine"><a href="https://mobirise.co/b">web creator</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-77" data-rv-view="1007" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
 
     
     <div class="container">
@@ -76,7 +76,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6h" data-rv-view="648" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-78" data-rv-view="1010" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -86,7 +86,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-6t" data-rv-view="834" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-7d" data-rv-view="1020" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -94,7 +94,7 @@
                     <div><img src="assets/images/img-1400x1050.jpg"></div>
 
                     <figcaption class="mbr-figure-caption mbr-figure-caption-over">
-                        <div class="container">This is the dance group.</div>
+                        <div class="container">The dance team.</div>
                     </figcaption>
 
                 </figure>
@@ -103,27 +103,34 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6j" data-rv-view="652" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-7a" data-rv-view="1014" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p>GAIA, or Global Awareness Investigation and Action, is a club that focuses on environmental issues and places emphasis on acting on them.  They will be meeting Wednesday at lunch in HB01. Varsity Darts is on Tuesday at lunch in Mr. MacDonalds room, HD03. Amnesty International is an independent group from any political party or religious organization. They actively pursue justice wherever there seems to be a lack of it to fight power abuses worldwide. This group is run by Megan and Junior and will be meeting Wednesdays at lunch in room HC17. Jazz Band will be meeting Wednesday at lunch, Choir will be meeting Wednesday at 4:00-5:30, and Vocal Jazz will be meeting Thursday at lunch, all in the PAC. All of these are excellent opportunities to become a better artist and have no conflicting sports.</p></div>
+            <div class="col-xs-12 lead"><p>GAIA, or Global Awareness Investigation and Action, is a club that focuses on environmental issues and places emphasis on acting on them.  They will be meeting Wednesday at lunch in HB01. Varsity Darts is on Tuesday at lunch in Mr. MacDonalds room, HD03. Amnesty International is an independent group from any political party or religious organization. They actively pursue justice wherever there seems to be a lack of it to fight power abuses worldwide. This group is run by Megan and Junior and will be meeting Wednesdays at lunch in room HC17. Jazz Band will be meeting Wednesday at lunch, Choir will be meeting Wednesday at 4:00-5:30, and Vocal Jazz will be meeting Thursday at lunch, all in the PAC. All of these are excellent opportunities to become a better artist and have no conflicting sports.</p><p><br></p><p>MUN will be meeting Tuesday at lunch in room HB01 to debate and discuss global issues. No prior knowledge is necessary but one should have a decent understanding of global issues and politics before joining the Model United Nations. The Feminist Society will be meeting Thursdays at lunch in room HB08 to discuss issues concerning feminism and equality. They would also like us to know that they are not anti-men. The programming club will be meeting Friday at lunch in Dr. Carlin’s room. Remember to bring your laptop! The chess club was a bit too busy playing chess to answer my questions, but I did manage to get the important stuff out of them. They’ll be meeting Friday at lunch in Mme. Larivieres room.</p></div>
         </div>
     </div>
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6l" data-rv-view="656" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
-
+<section class="mbr-section mbr-section__container" id="image2-79" data-rv-view="1012" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p>MUN will be meeting Tuesday at lunch in room HB01 to debate and discuss global issues. No prior knowledge is necessary but one should have a decent understanding of global issues and politics before joining the Model United Nations. The Feminist Society will be meeting Thursdays at lunch in room HB08 to discuss issues concerning feminism and equality. They would also like us to know that they are not anti-men. The programming club will be meeting Friday at lunch in Dr. Carlin’s room. Remember to bring your laptop! The chess club was a bit too busy playing chess to answer my questions, but I did manage to get the important stuff out of them. They’ll be meeting Friday at lunch in Mme. Larivieres room.</p></div>
+            <div class="col-xs-12">
+                <figure class="mbr-figure">
+                    <div><img src="assets/images/img-1400x1050.png"></div>
+
+                    <figcaption class="mbr-figure-caption mbr-figure-caption-over">
+                        <div class="container">The band playing a song.</div>
+                    </figcaption>
+
+                </figure>
+            </div>
         </div>
     </div>
-
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6o" data-rv-view="662" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-7c" data-rv-view="1018" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -133,7 +140,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-6f" data-rv-view="643" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-76" data-rv-view="1005" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
