--- a/page26.html
+++ b/page26.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">free web creator</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-7g" data-rv-view="24" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.co/c">free web maker</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-7g" data-rv-view="24" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
