--- a/Comedy.html
+++ b/Comedy.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/i">build your own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-t" data-rv-view="67" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co/g">how to create your own website for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-t" data-rv-view="67" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -79,7 +79,7 @@
                                 <p>Our latest group-written horoscopes.</p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page15.html">MORE</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page27.html">MORE</a></div>
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 50%;">
