--- a/page27.html
+++ b/page27.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/h">how to make your own website</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features7-7r" data-rv-view="434" style="background-color: rgb(145, 189, 174);">
+<section class="engine"><a href="https://mobirise.co/q">bootstrap slideshow</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features7-7r" data-rv-view="434" style="background-color: rgb(145, 189, 174);">
 
     
 
