--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">free web page creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-31" data-rv-view="10" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co/l">bootstrap theme</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-31" data-rv-view="10" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -106,12 +106,12 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/map2-420x412.png" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/italy-migrants-refugees-asylum-seekers-600x400.jpg" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">The Story Behind Maps</h4>
-                        <h5 class="card-subtitle">Written By: Camille Kummer</h5>
-                        <p class="card-text">By examining the evolution of maps through history, this article uncovers how maps affect the way we perceive the world.<br><br></p>
-                        <div class="card-btn"><a href="page18.html" class="btn btn-danger">MORE</a></div>
+                        <h4 class="card-title">Living the Dream?</h4>
+                        <h5 class="card-subtitle">Written By: Eva Morris</h5>
+                        <p class="card-text">While mostly based on fact, this is partially an opinion piece delving in to the problem of the migrant crisis in Europe.<br><br></p>
+                        <div class="card-btn"><a href="page16.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
             </div>
@@ -145,12 +145,12 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/italy-migrants-refugees-asylum-seekers-600x400.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/130518052242-north-korea-missiles-super-169-600x337.jpg" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">Living the Dream?</h4>
+                        <h4 class="card-title">Time to Grow Up<div>Mr. Kim Jong-Un</div></h4>
                         <h5 class="card-subtitle">Written By: Eva Morris</h5>
-                        <p class="card-text">While mostly based on fact, this is partially an opinion piece delving in to the problem of the migrant crisis in Europe.</p>
-                        <div class="card-btn"><a href="page16.html" class="btn btn-danger">MORE</a></div>
+                        <p class="card-text">An piece discussing the North Korean missiles. <br>Note: Since this article was written, a second missile was launched on the 15th September.&nbsp;</p>
+                        <div class="card-btn"><a href="page26.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
             </div>
